# arete

./: .gitignore  Cargo.toml  README.md  roadmap.md
benchmark/: fabfile.py
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  local_shard.py  logs.py  remote.py  settings.py  utils.py
certify/: Cargo.toml
certify/src/: aggregator.rs  config.rs  confirm_executor.rs  consensus.rs  core.rs  error.rs  helper.rs  leader.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  quorum_waiter.rs  synchronizer.rs  timer.rs  vote_maker.rs
consensus/: Cargo.toml
consensus/src/: aggregator.rs  config.rs  consensus.rs  core.rs  helper.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  synchronizer.rs  timer.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
evaluation/: README.md  comparison.py  shard.py
evaluation/results/: shard_size_evl-100-20-15.txt  shard_size_evl-100-30-15.txt  shard_size_evl-1000-20-15.txt  shard_size_evl-1000-30-15.txt  shard_size_evl-1000-30-20.txt  shard_size_evl-1000-30-25.txt  shard_size_evl-100000-30-25.txt  shard_size_evl-1500-20-15.txt  shard_size_evl-1500-30-15.txt  shard_size_evl-200-20-15.txt  shard_size_evl-200-30-15.txt  shard_size_evl-2000-20-15.txt  shard_size_evl-2000-30-15.txt  shard_size_evl-2500-20-15.txt  shard_size_evl-2500-30-15.txt  shard_size_evl-300-20-15.txt  shard_size_evl-300-30-15.txt  (+18 more)
execpool/: Cargo.toml
execpool/src/: lib.rs  (+7 more)
executor/: Cargo.toml
mempool/: Cargo.toml
network/: Cargo.toml
node/: Cargo.toml
store/: Cargo.toml
types/: Cargo.toml
types/src/: config.rs  error.rs  lib.rs  messages.rs
(+34 files in other folders)
