[package]
name = "types"
version = "0.1.0"
authors = ["Jianting Zhang <antfinancialyujian@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
ed25519-dalek = "1.0.1"
serde = { version = "1.0", features = ["derive"] }

crypto = { path = "../crypto" }